syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/vterebey/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc ListChats(ListChatsRequest) returns (ListChatsResponse);
  rpc Connect(ConnectRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc AddUser(AddUserRequest) returns (google.protobuf.Empty);
  rpc BanUser(BanUserRequest) returns (google.protobuf.Empty);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

enum ChatState {
  CHAT_ACTIVE = 0;
  CHAT_DELETE = 1;
}

message ChatInfo {
  string name = 1; // chat unic name for view
  ChatState state = 2;
  google.protobuf.Timestamp create_at = 3;
}

message ChatModel {
  int64 id = 1;
  ChatInfo chat = 2;
}

enum UserState {
  USER_NOT_CONFIRM = 0; // user must connect
  USER_ACTIVE = 1;
  USER_BAN = 2;
  USER_DELETE = 3;
}

message UserInfo {
  string name = 1; // for view in chat-room
  string email = 2; // unic
  UserState state = 3;
}

message UserModel {
  int64 id = 1;
  UserInfo user = 2;
}

message Message {
  int64 from = 1; // email
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CreateChatRequest {
  ChatInfo chat = 1;
  repeated UserInfo users = 2;
}

message CreateChatResponse {
  int64 id = 1; // number in pool chat-rooms
}

message DeleteChatRequest {
  int64 id = 1;
}

message AddUserRequest {
  UserInfo user = 1;
}

message AddUserResponse {
  int64 id = 1;
}

message BanUserRequest {
  int64 id = 1;
}

message ConnectRequest {
  int64 id = 1;
}


message SendMessageRequest {
  Message message = 1;
}

message ListChatsRequest {
}

message ListChatsResponse {
  repeated ChatModel chats = 1;
}

message ListUsersRequest {
  int64 id = 1;
}

message ListUsersResponse {
  repeated UserModel users = 1;
}


